Fix styling issues
Remove urls from prints
Fix nav bar overlap when shrinking page

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -5,3 +5,20 @@
     padding-bottom: 20px;
   }
 }
+/* fix padding under menu after resize */
+@media screen and (max-width: 767px) {
+  body { padding-top: 60px; }
+}
+@media screen and (min-width:768px) and (max-width: 991px) {
+  body { padding-top: 110px; }
+}
+@media screen and (min-width: 992px) {
+  body { padding-top: 60px; }
+}
+
+/* Remove wierd Bootstrp urls when printing */
+@media print {
+  a[href]:after {
+    content: "";
+  }
+}
